# conveyor

./: .formatter.exs  .gitignore  ARCHITECTURE.md  AUTONOMY_LEVELS.md  EVIDENCE_SCHEMA.md  README.md  SAFETY_POLICY.md  TASK_SCHEMA.md  VISION.md  mix.exs
.beads/: config.yaml  issues.jsonl
.claude/: settings.toml
.conveyor/: config.toml
.github/workflows/: control-plane.yml  docs-contract.yml  docs.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CUTLINES.md  THREAT_MODEL.md  runtime.md
docs/adr/: 0001-beam-ash-conductor-owns-truth.md  0002-evidence-is-product-artifact.md  0003-docker-is-not-security-boundary.md  0004-testpack-contractlock-never-cut.md  0005-gate-canaries-fail-closed.md  0006-phase1-l1-with-l2-shaped-artifacts.md  (+1 more)
lib/: conveyor_web.ex
sample_apps/fastapi_tasks/: .gitignore  AGENTS.md  README.md  pyproject.toml
sample_apps/fastapi_tasks/.conveyor/: config.toml
sample_apps/fastapi_tasks/plans/: complete_tasks.md
sample_apps/fastapi_tasks/run_specs/: baseline.run_spec.json
sample_apps/fastapi_tasks/scripts/: plan_audit.py  run_baseline.sh
sample_apps/fastapi_tasks/src/fastapi_tasks/: __init__.py  app.py
sample_apps/fastapi_tasks/tests/: test_baseline.py
sample_apps/fastapi_tasks/tests/baseline_regression/: test_create_list.py
scripts/: agents_md_contract.py  check_adrs.py  check_cutlines.py  check_docs_contract.py  check_future_schemas.py  check_phase_hooks.py  check_policy_profiles.py  check_threat_model.py  ci_control_plane.sh  docs_lint.py  validate_schema_registry.py  verify_phase0_docs.py
(+113 files in other folders)
